# Term-do-rs

./: .gitignore  Cargo.toml  README.md  settings.ini
data/: data.json
src/: config_manager.rs  controls_layout.rs  data_manager.rs  enums.rs  group_layout.rs  history.rs  main.rs  tasks_layout.rs
src/data/: data.json
