[package]
name = "term_do"
version = "0.5.0"
edition = "2021"
description = "This is a small terminal tool for tracking tasks and also my first project! It is simple, but hope it is as helpful for other people as it is for me."
readme = "README.md"
repository = "https://github.com/bovacu/Term-do-rs"
license = "GPL"
keywords = ["task", "task list", "terminal"]
categories = ["command-line-utilities", "development-tools"]
documentation = ""
exclude = [
    ".idea/*",
]

[dependencies]
tui = "0.18"
crossterm = "0.23"
unicode-width = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }